# Gobang-Game

./: .gitignore  AI_DEVELOPMENT_ACKNOWLEDGMENT.md  BILINGUAL_PROJECT_COMPLETION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD_SUCCESS.md  GitHub上传问题诊断.md  GitHub发布指南.md  LICENSE  QUICK_START.md  README.md  README_test.md  User_Guide_双语版.md  check_all_patterns.py  check_one_move_patterns.py  check_three_move_patterns.py  final_bilingual_verification.py  final_check_all.py  language_config.json  launch_game.py  launcher.py  main.py  publish_to_github.py  pyproject.toml  requirements.txt  test_all_two_move.py  test_pattern31.py  test_pattern_bilingual.py  test_three_move.py  test_validator_bilingual.py  upload_to_github.py  verify_bilingual_complete.py  上传到GitHub.bat  使用说明.md  双语化完成报告.md  发布到GitHub.bat  发布成功说明.md  启动游戏.bat  棋谱分析双语化更新报告.md  音效和AI辅助编码完成报告.md  (+1 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
game/: __init__.py  board.py  pattern.py  sound_manager.py  validator.py
gui/: __init__.py  game_window.py
tests/: README.md  test_game.py
